--- a/pdns.conf
+++ b/pdns.conf
@@ -171,7 +171,7 @@ socket-dir=/var/run
 version-string=powerdns
 
 # webserver	Start a webserver for monitoring
-webserver=no
+webserver=yes
 
 # webserver-address	IP Address of webserver to listen on
 # webserver-address=127.0.0.1
@@ -180,7 +180,7 @@ webserver=no
 # webserver-password=
 
 # webserver-port	Port of webserver to listen on
-# webserver-port=8081
+webserver-port=8081
 
 # webserver-print-arguments	If the webserver should print arguments
 # webserver-print-arguments=no
@@ -188,3 +188,6 @@ webserver=no
 # wildcard-url	Process URL and MBOXFW records
 # wildcard-url=no
 
+# API
+api=yes
+api-key=pdnsapikey
